template de base

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio Timéo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     Hello world
+    <header>
+        <img src="orange.jpg" alt="Logo">
+        <h1> Timéo Hamlil--Bénard</h1>
+    </header>
+    <nav>
+        <li>
+            <a href="">Home</a>
+            <a href="">Skills</a>
+            <a href="">Projects</a>
+            <a href="">Contact</a>
+    
+        </li>
+    </nav>
+    <div class="comp">Competence</div>
+    <div class="formation">Formation</div>
+    <div class="softskills">Soft-Skills</div>
+    <div class="langue">Langues</div>
+    <div class="interets">Interets</div>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
