--- a/index.html
+++ b/index.html
@@ -10,23 +10,31 @@
 <body>
     Hello world
     <header>
-        <img src="orange.jpg" alt="Logo">
+        <img src="Image.png" alt="Logo">
         <h1> Timéo Hamlil--Bénard</h1>
-    </header>
+    </header>          
     <nav>
-        <li>
-            <a href="">Home</a>
-            <a href="">Skills</a>
-            <a href="">Projects</a>
-            <a href="">Contact</a>
+        <a href="">Home</a>
+        <a href="">Skills</a>
+        <a href="">Projects</a>
+        <a href="">Contact</a>
+    </nav>     
     
-        </li>
-    </nav>
-    <div class="comp">Competence</div>
-    <div class="formation">Formation</div>
-    <div class="softskills">Soft-Skills</div>
-    <div class="langue">Langues</div>
-    <div class="interets">Interets</div>
+    <div class="comp">
+        <h3>Competence</h3>
+    </div>
+    <div class="formation">
+        <h3>Formation </h3>
+    </div>
+    <div class="softskills">
+        <h3>Soft-Skills</h3>
+    </div>
+    <div class="langue">
+        <h3>Langues</h3>
+    </div>
+    <div class="interets">
+        <h3>Interets</h3>
+    </div>
 
     <footer>
         
